updated for blog post

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,17 @@
 ---
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="Blog">
-<body>
-    <h1><span class="text-gradient">My Astro Blog</span></h1>
-	<h2>Welcome to the astro blog </h2>
 
-	<p>
-        I am learning to use the <strong>astro</strong> framework.
-    </p>
-</body>
+<Layout title="Blog">
+    <body>
+        <h1><span class="text-gradient">My Astro Blog</span></h1>
+    	<h2>Welcome to the astro blog </h2>
+
+    	<p>
+            I am learning to use the <strong>astro</strong> framework.
+        </p>
+        <ul>
+            <li><a href='/posts/post-1'>Post 1</a></li>
+        </ul>
+    </body>
+</Layout>
