--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,6 +16,10 @@ const skills =["HTML", "CSS", "Javascript", "React", "Astro", "Writing Docs"];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy"
+const fontWeight = "bold"
+const textCase = "uppercase"
 ---
 <Layout title={pageTitle}>
     <body>
@@ -36,7 +40,7 @@ const goal = 3;
         </ul>
         <p><strong>My skills are:</strong></p>
         <ul>
-          {skills.map((skill) => <li>{skill}</li>)}
+          {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
 
         {happy && <p>I am happy to be learning Astro!</p>}
@@ -46,3 +50,11 @@ const goal = 3;
         {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
     </body>
 </Layout>
+
+<style define:vars={{skillColor, fontWeight,textCase}}>
+    .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+    }
+</style>
