--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import '../styles/global.css'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+
 interface Props {
 	title: string;
 }
@@ -17,10 +21,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-	    <a href ="/">Home</a>
-		<a href ="/about/">About</a>
-		<a href ="/blog/">Blog</a>
+	    <Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -50,11 +53,5 @@ const { title } = Astro.props;
 			Courier New,
 			monospace;
 	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
+
 </style>
