playing with layouts, starting to work on markdown layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,10 @@ import Card from '../components/Card.astro';
 				body="Link to youtube."
 			/>
 		</ul>
+
+		<div class="instructions">
+		  <code>npm run dev</code> to start the development server.
+		</div>
 	</main>
 </Layout>
 
