--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,14 @@
 ---
 import Navigation from './Navigation.astro';
-
+import Hamburger from './Hamburger.astro';
 ---
 
 <style>
 
 </style>
-
-<Navigation />
+<header>
+    <nav>
+        <Hamburger />
+        <Navigation />
+    </nav>
+</header>
