--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,6 +6,8 @@
     }
 </style>
 
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+<div class="nav-links">
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
+</div>
