--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,19 @@
+html {
+	font-family: system-ui, sans-serif;
+	background: #13151a;
+}
+code {
+	font-family:
+		Menlo,
+		Monaco,
+		Lucida Console,
+		Liberation Mono,
+		DejaVu Sans Mono,
+		Bitstream Vera Sans Mono,
+		Courier New,
+		monospace;
+}
+
 .text-gradient {
   background-image: var(--accent-gradient);
   -webkit-background-clip: text;
@@ -5,3 +21,64 @@
   background-size: 400%;
   background-position: 0%;
 }
+
+/* nav styles */
+.hamburger {
+    padding-right:20px;
+    cursor: pointer;
+}
+
+.hamburger .line {
+    display:block;
+    width:40px;
+    height:5px;
+    margin-bottom:10px;
+    background-color: #ff9776;
+}
+
+
+
+.nav-links{
+    width: 100%;
+    top: 5rem;
+    left:48px;
+    display: none;
+    margin:0;
+}
+
+.nav-links a {
+  display: block;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 0.5rem 0;
+}
+
+.nav-links a:hover,
+.nav-links a:focus {
+  background-color: #ff9776;
+}
+
+.expanded {
+  display: unset;
+}
+
+@media screen and (min-width: 636px) {
+  .nav-links {
+    margin-left: 5em;
+    display: block;
+    position: static;
+    width: auto;
+    background: none;
+  }
+
+  .nav-links a {
+    display: inline-block;
+    padding: 15px 20px;
+  }
+  .hamburger
+  {
+      display:none;
+  }
