--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,9 +1,11 @@
 ---
-import Header from '../components/Header.astro';
-import '../styles/global.css';
+import Layout from './Layout.astro';
 const { frontmatter } = Astro.props;
 ---
-<Header />
-<h1>{frontmatter.title}</h1>
-<p>Written by {frontmatter.author}</p>
-<slot />
+<Layout title={frontmatter.title}>
+    <p>Published on: {frontmatter.pubDate.toString().slice(0,10)} </p>
+    <p><em>{frontmatter.description}</em></p>
+    <p>Written by {frontmatter.author}</p>
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <slot />
+</Layout>
