--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,10 @@ code {
 		monospace;
 }
 
+h1 {
+    display: block;
+}
+
 .text-gradient {
   background-image: var(--accent-gradient);
   -webkit-background-clip: text;
