--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ const skills =["HTML", "CSS", "Javascript", "React", "Astro", "Writing Docs"];
 
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "navy"
@@ -23,7 +23,7 @@ const textCase = "uppercase"
 ---
 <Layout title={pageTitle}>
     <body>
-    	<h2>Welcome to the astro site </h2>
+    	<h2 class="text-2xl font-bold underline">Welcome to the astro site </h2>c
 
     	<p>
             I am learning to use the <strong>astro</strong> framework.
