--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,7 +2,7 @@
 const { platform, username } = Astro.props;
 ---
 
-<a href={`https://www.${platform}.com/${username}`}>{platform}</a>
+<a class="hover:bg-sky-800" href={`https://www.${platform}.com/${username}`}>{platform}</a>
 
 <style>
     a {
