--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 	    <Header />
-		<h1><span class="text-gradient">{title}</span></h1>
+		<h1 class="text-5xl font-bold text-center"><span class="text-gradient">{title}</span></h1>
 		<slot />
 		<Footer />
 	</body>
