--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,19 +10,7 @@ const twitter = "twitter"
 const twitterUser = "psveagle"
 
 ---
-
-<style>
-    footer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        padding: 1rem;
-        color:black
-    }
-</style>
-
-<footer class="bg-gray-400">
+<footer class="bg-violet-900 text-slate-200 flex justify-center items-center gap-4 p-4">
     <Social platform={github} username={githubUser} />
     <Social platform={linkedin} username={linkedinUser} />
     <Social platform={twitter} username={twitterUser} />
