--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,11 +23,11 @@ const { title } = Astro.props;
 		</script>
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class= "text-slate-200 min-h-screen" >
 	    <Header />
 		<h1 class="text-5xl font-bold text-center"><span class="text-gradient">{title}</span></h1>
 		<slot />
-		<Footer />
+		<Footer class="inset-x-0 bottom-0" />
 	</body>
 </html>
 <style is:global>
