--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Greeting from '../components/Greeting';
+import '@/styles/global.css'
 ---
 
 <Layout title="Home Page">
@@ -18,8 +19,8 @@ import Greeting from '../components/Greeting';
 			<Card
 				href="https://www.youtube.com"
 				title="Youtube"
-				body="Link to youtube."
-			/>
+				body="Link to youtube website"
+			>
 		</ul>
 
 		<div class="instructions">
