--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,10 +10,9 @@ const twitter = "twitter"
 const twitterUser = "psveagle"
 
 ---
-<footer class="bg-violet-900 text-slate-200 flex justify-center items-center gap-4 p-4">
+<footer class="bg-violet-900 text-slate-200 flex justify-center items-center gap-4 p-4 sticky top-[100vh]">
     <Social platform={github} username={githubUser} />
     <Social platform={linkedin} username={linkedinUser} />
     <Social platform={twitter} username={twitterUser} />
     <p>© 2024 PsVEagle</p>
-    <ThemeIcon class="right-0"/>
 </footer>
