--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,12 @@
 ---
-import Navigation from './Navigation.astro';
-import Hamburger from './Hamburger.astro';
+import Navigation from './Navigation';
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
-<style>
-
-</style>
-<header>
-    <nav>
-        <Hamburger />
-        <Navigation />
+<header class = "min-w-max">
+    <nav class="inline-flex">
+        <Navigation client:load/>
+        <ThemeIcon class="absolute inset-y-0 right-0"/>
     </nav>
+
 </header>
